[tool.poetry]
name = "ThreeWayAttentionPackage"
version = "0.1.0"
description = ""
authors = ["Paul <pzpzpzp1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python="^3.8"
torch = "^2.1.0"
einops = "^0.6.0"
einops-exts = "^0.0.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
